Bug 1280814 - Prevent the media::Interval crash due to the unexpected playback position. r=rillian, a=lizzard

--HG--
extra : rebase_source : 2e2a1e58a456f74467a5bcc1811b0a1a698e5884